@@ -33,6 +33,9 @@
                             <para>Fixed problem bgo#641842 (use poppler-glib instead of poppler internal API)</para>
                         </listitem>
                         <listitem>
+                            <para>Fixed problem bgo#726682 (Patch to fix undefined reference to vtable)</para>
+                        </listitem>
+                        <listitem>
                            <para>Support for utf8 encoded creation and modification dates in document metadata</para>
                        </listitem>
                         <listitem>
