@@ -4,6 +4,7 @@ gnome-commander 1.4.1
 
 Bug fixes:
  * Fixed problem bgo#641842 (use poppler-glib instead of poppler internal API)
+ * Fixed problem bgo#726682 (Fix for undefined reference to vtable)
  * Support for utf8 encoded creation and modification dates in document metadata
  * Moved Search, Quick Search and Enable Filter from Edit to File menu
 New features:
